--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     </section><!-- End My Resume Section -->
 
     <!-- ======= My Services Section ======= -->
-    <section id="services" class="services">
+    <section id="skills" class="skills">
       <div class="container">
 
         <div class="section-title">
