--- a/fromscratch.html
+++ b/fromscratch.html
@@ -29,37 +29,43 @@
         <h2>"Happiness depends upon ourselves." —Aristotle</h2>
         <h2>What makes me Happy?</h2>
         <img src="assets/img/fromscratch.JPG" width="400" alt="Hiking with Family">
-        <ol class="leftalign" class="textsize">
+        <div class="leftalign" class="textsize">
+        <ol>
             <li>My Hoobies</li>
                 <ul>
                     <li> Baking
-                        <ul class="textstyle">
+                        <div class="textstyle">
+                        <ul>
                             <li>Brownies</li>
                             <li>Cookies</li>
                             <li>Cakes</li>
                         </ul>
-
+                        </div>
                     </li>
                 </ul>
             <li>My family
                 <ul>
                     <li> Spending Time Together
-                        <ul class="textstyle">
+                        <div class="textstyle">
+                        <ul>
                             <li>Hiking</li>
                             <li>Watching Movies</li>
                             <li>Playing Games</li>
                         </ul>
-
+                        </div>
                     </li>
                 </ul>
             </li>
-        <li>Being Outside
-                <ul class="textstyle">
+            <li>Being Outside
+                <div class="textstyle">
+                <ul>
                     <li>Rock Climbing</li>
                     <li>Swimming</li>
                 </ul>
+                </div>
             </li>
         </ol>
+        </div>
     </div>
   
 
