--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
+                <textarea class="form-control" name="message" rows="6" placeholder="Messaging system currently not available! Please send messages to provided email." required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
